; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-drv.c_iwl_free_fw_img.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/extr_iwl-drv.c_iwl_free_fw_img.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_drv = type { i32 }
%struct.fw_img = type { i32* }

@IWL_UCODE_SECTION_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwl_drv*, %struct.fw_img*)* @iwl_free_fw_img to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwl_free_fw_img(%struct.iwl_drv* %0, %struct.fw_img* %1) #0 {
  %3 = alloca %struct.iwl_drv*, align 8
  %4 = alloca %struct.fw_img*, align 8
  %5 = alloca i32, align 4
  store %struct.iwl_drv* %0, %struct.iwl_drv** %3, align 8
  store %struct.fw_img* %1, %struct.fw_img** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %19, %2
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @IWL_UCODE_SECTION_MAX, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %22

10:                                               ; preds = %6
  %11 = load %struct.iwl_drv*, %struct.iwl_drv** %3, align 8
  %12 = load %struct.fw_img*, %struct.fw_img** %4, align 8
  %13 = getelementptr inbounds %struct.fw_img, %struct.fw_img* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i32, i32* %14, i64 %16
  %18 = call i32 @iwl_free_fw_desc(%struct.iwl_drv* %11, i32* %17)
  br label %19

19:                                               ; preds = %10
  %20 = load i32, i32* %5, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %5, align 4
  br label %6

22:                                               ; preds = %6
  ret void
}

declare dso_local i32 @iwl_free_fw_desc(%struct.iwl_drv*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
